Compiladores/bison/parentesis/y.output
Terminals unused in grammar

   '+'
   '-'
   '*'
   '/'
   '^'


Grammar

    0 $accept: input $end

    1 input: %empty
    2      | input line

    3 line: '\n'
    4     | lista '\n'

    5 lista: NUM
    6      | lista ',' NUM
    7      | '(' lista ')'
    8      | '(' lista ')' '(' lista ')'
    9      | lista ',' '(' lista ')'
   10      | '(' ')'


Terminals, with rules where they appear

$end (0) 0
'\n' (10) 3 4
'(' (40) 7 8 9 10
')' (41) 7 8 9 10
'*' (42)
'+' (43)
',' (44) 6 9
'-' (45)
'/' (47)
'^' (94)
error (256)
NUM (258) 5 6


Nonterminals, with rules where they appear

$accept (13)
    on left: 0
input (14)
    on left: 1 2, on right: 0 2
line (15)
    on left: 3 4, on right: 2
lista (16)
    on left: 5 6 7 8 9 10, on right: 4 6 7 8 9


State 0

    0 $accept: . input $end

    $default  reduce using rule 1 (input)

    input  go to state 1


State 1

    0 $accept: input . $end
    2 input: input . line

    $end  shift, and go to state 2
    NUM   shift, and go to state 3
    '('   shift, and go to state 4
    '\n'  shift, and go to state 5

    line   go to state 6
    lista  go to state 7


State 2

    0 $accept: input $end .

    $default  accept


State 3

    5 lista: NUM .

    $default  reduce using rule 5 (lista)


State 4

    7 lista: '(' . lista ')'
    8      | '(' . lista ')' '(' lista ')'
   10      | '(' . ')'

    NUM  shift, and go to state 3
    '('  shift, and go to state 4
    ')'  shift, and go to state 8

    lista  go to state 9


State 5

    3 line: '\n' .

    $default  reduce using rule 3 (line)


State 6

    2 input: input line .

    $default  reduce using rule 2 (input)


State 7

    4 line: lista . '\n'
    6 lista: lista . ',' NUM
    9      | lista . ',' '(' lista ')'

    '\n'  shift, and go to state 10
    ','   shift, and go to state 11


State 8

   10 lista: '(' ')' .

    $default  reduce using rule 10 (lista)


State 9

    6 lista: lista . ',' NUM
    7      | '(' lista . ')'
    8      | '(' lista . ')' '(' lista ')'
    9      | lista . ',' '(' lista ')'

    ')'  shift, and go to state 12
    ','  shift, and go to state 11


State 10

    4 line: lista '\n' .

    $default  reduce using rule 4 (line)


State 11

    6 lista: lista ',' . NUM
    9      | lista ',' . '(' lista ')'

    NUM  shift, and go to state 13
    '('  shift, and go to state 14


State 12

    7 lista: '(' lista ')' .
    8      | '(' lista ')' . '(' lista ')'

    '('  shift, and go to state 15

    $default  reduce using rule 7 (lista)


State 13

    6 lista: lista ',' NUM .

    $default  reduce using rule 6 (lista)


State 14

    9 lista: lista ',' '(' . lista ')'

    NUM  shift, and go to state 3
    '('  shift, and go to state 4

    lista  go to state 16


State 15

    8 lista: '(' lista ')' '(' . lista ')'

    NUM  shift, and go to state 3
    '('  shift, and go to state 4

    lista  go to state 17


State 16

    6 lista: lista . ',' NUM
    9      | lista . ',' '(' lista ')'
    9      | lista ',' '(' lista . ')'

    ')'  shift, and go to state 18
    ','  shift, and go to state 11


State 17

    6 lista: lista . ',' NUM
    8      | '(' lista ')' '(' lista . ')'
    9      | lista . ',' '(' lista ')'

    ')'  shift, and go to state 19
    ','  shift, and go to state 11


State 18

    9 lista: lista ',' '(' lista ')' .

    $default  reduce using rule 9 (lista)


State 19

    8 lista: '(' lista ')' '(' lista ')' .

    $default  reduce using rule 8 (lista)
